--- a/mobileindex.html
+++ b/mobileindex.html
@@ -13,7 +13,6 @@
       background: #181820;
       color: #fff;
     }
-    /* --- HEADER + NAV --- */
     header {
       position: fixed;
       top: 0; left: 0; right: 0;
@@ -221,8 +220,198 @@
       display: block;
       margin-top: 1rem;
     }
-    /* ...continue styling for services section, footer, etc... (omit for brevity) */
-
+    .cta-button:hover {
+      background: #2563eb;
+      color: #fff;
+    }
+    .cta-button:active {
+      transform: scale(0.965);
+      background: #1d47b8;
+      color: #fff;
+      box-shadow: 0 2px 10px #232f3e40;
+    }
+    #services {
+      margin-top: 3rem;
+    }
+    #services h2 {
+      color: #b6befb;
+      font-weight: 700;
+      margin-bottom: 1.5rem;
+    }
+    .services {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 1.5rem;
+      justify-content: center;
+    }
+    .service {
+      background: #2a2b36;
+      border-radius: 10px;
+      padding: 1.5rem 1rem;
+      width: 280px;
+      color: #c0c2d4;
+      box-shadow: 0 4px 12px #191a2336;
+      text-align: center;
+    }
+    .service h3 {
+      color: #b6befb;
+      font-weight: 600;
+      margin-bottom: 0.5rem;
+      font-size: 1.3rem;
+    }
+    #about {
+      margin: 3rem 0;
+      max-width: 600px;
+      margin-left: auto;
+      margin-right: auto;
+      font-size: 1rem;
+      line-height: 1.5;
+      color: #e8e6ff;
+    }
+    .testimonials {
+      margin-top: 2rem;
+      color: #c0c2d4;
+      font-style: italic;
+      text-align: center;
+      max-width: 600px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+    .testimonials strong {
+      display: block;
+      font-weight: 700;
+      margin-bottom: 0.5rem;
+      color: #b6befb;
+    }
+    footer.footer-main {
+      background: #1d1c22;
+      color: #bbb;
+      padding: 2rem 1rem;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 1rem;
+    }
+    .footer-top {
+      width: 100%;
+      max-width: 1300px;
+      display: flex;
+      gap: 2rem;
+      justify-content: space-between;
+      flex-wrap: wrap;
+      border-bottom: 1px solid #292834;
+      padding-bottom: 1rem;
+    }
+    .footer-col {
+      flex: 1 1 260px;
+      color: #bfc2cf;
+      font-size: 1em;
+      min-width: 200px;
+    }
+    .footer-col strong {
+      color: #fff;
+      font-size: 1.1em;
+      font-weight: 600;
+      letter-spacing: 0.02em;
+      display: block;
+      margin-bottom: 0.4em;
+    }
+    .footer-col .detail {
+      color: #b9bacf;
+      line-height: 1.4;
+      margin-bottom: 1em;
+      font-size: 0.95em;
+    }
+    .footer-bottom {
+      width: 100%;
+      max-width: 1300px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      color: #848484;
+      font-size: 1rem;
+      padding-top: 0.5em;
+      font-family: inherit;
+      flex-wrap: wrap;
+    }
+    .footer-links a {
+      color: #bbb;
+      text-decoration: none;
+      margin: 0 1em 0 0;
+      font-size: 0.97em;
+      transition: color 0.2s ease-in-out;
+    }
+    .footer-links a:hover {
+      color: #fff;
+    }
+    @media (max-width: 768px) {
+      nav {
+        position: fixed;
+        top: 70px;
+        right: 0;
+        height: calc(100% - 70px);
+        width: 220px;
+        background-color: #181820;
+        flex-direction: column;
+        padding: 1rem;
+        gap: 1rem;
+        box-shadow: -4px 0 16px rgba(0,0,0,0.7);
+        transform: translateX(100%);
+        transition: transform 0.3s ease-in-out;
+        overflow-y: auto;
+      }
+      nav.open {
+        transform: translateX(0);
+      }
+      .dropdown-content {
+        position: relative;
+        background: none;
+        box-shadow: none;
+        margin-top: 0;
+        padding: 0;
+        border-radius: 0;
+      }
+      .dropdown-content a {
+        padding-left: 1rem;
+      }
+      .dropdown:hover .dropdown-content {
+        display: none;
+      }
+      .menu-toggle {
+        display: flex;
+      }
+    }
+    @media (max-width: 420px) {
+      header img {
+        height: 50px;
+      }
+      .hero h1 {
+        font-size: 2rem;
+      }
+      .service {
+        width: 95vw;
+      }
+      .footer-top {
+        gap: 1rem;
+      }
+      .footer-bottom {
+        font-size: 0.85rem;
+      }
+    }
+    .menu-toggle {
+      display: none;
+      flex-direction: column;
+      gap: 5px;
+      width: 30px;
+      height: 22px;
+      cursor: pointer;
+    }
+    .menu-toggle span {
+      display: block;
+      height: 4px;
+      background-color: white;
+      border-radius: 2px;
+    }
   </style>
 </head>
 <body>
@@ -235,16 +424,16 @@
     </div>
     <nav id="navMenu">
       <div class="dropdown">
-        <div class="dropbtn">Services</div>
-        <div class="dropdown-content">
+        <div class="dropbtn" tabindex="0">Services</div>
+        <div class="dropdown-content" tabindex="-1">
           <a href="Services.html">Home Loans</a>
           <a href="Services.html">Property Advisory</a>
           <a href="Services.html">Asset Finance</a>
         </div>
       </div>
       <div class="dropdown">
-        <div class="dropbtn">About</div>
-        <div class="dropdown-content">
+        <div class="dropbtn" tabindex="0">About</div>
+        <div class="dropdown-content" tabindex="-1">
           <a href="about.html#mission">Company Mission</a>
           <a href="about.html#team">Meet Our Team</a>
         </div>
@@ -256,15 +445,15 @@
         </div>
       </div>
       <div class="dropdown">
-        <div class="dropbtn">Resources</div>
-        <div class="dropdown-content">
+        <div class="dropbtn" tabindex="0">Resources</div>
+        <div class="dropdown-content" tabindex="-1">
           <a href="resources.html#calculators">Home Loan Calculators</a>
           <a href="resources.html#lender-panel">Lender Panel</a>
           <a href="resources.html#blogs">Blogs</a>
           <a href="resources.html#faqs">FAQs</a>
         </div>
       </div>
-      <a href="contact.html">Contact</a>
+      <a href="contact.html" tabindex="0">Contact</a>
     </nav>
   </header>
   <main>
@@ -284,14 +473,98 @@
     </div>
     <section id="services">
       <h2>Our Services</h2>
-      <!-- Services content here -->
+      <div class="services">
+        <div class="service">
+          <h3>Home Loans</h3>
+          <p>Access competitive residential and commercial home loan solutions from 60+ lenders, tailored to your needs.</p>
+        </div>
+        <div class="service">
+          <h3>Property Advisory</h3>
+          <p>Guidance for buying, selling, or investing—local expertise and trusted advocacy to help you succeed.</p>
+        </div>
+        <div class="service">
+          <h3>Asset Finance</h3>
+          <p>Finance for vehicles, business equipment, and assets—streamlined for fast approvals and fair rates.</p>
+        </div>
+      </div>
     </section>
-    <!-- Further content as needed -->
+    <section id="about">
+      <h2>About Nest Capital Finance</h2>
+      <p>At Nest Capital Finance, our mission is to simplify the journey to your dream property. Our award-nominated team combines industry experience, personal service, and insider access to leading lenders—earning 5-star client reviews every step of the way. Based in Australia, we support clients locally and overseas with tailored mortgage and property solutions.</p>
+      <div class="testimonials">
+        <strong>Testimonials</strong>
+        <div class="testimonial">"Nest Capital Finance made my home buying journey stress-free—professional, fast, and found a great rate for me." — Chris, Melbourne</div>
+        <div class="testimonial">"Expert advice, clear communication, and genuine care. Couldn’t recommend them more highly." — Priya, Sydney</div>
+      </div>
+    </section>
   </main>
-  <footer>
-    <!-- Footer content here -->
+  <footer class="footer-main">
+    <div class="footer-top">
+      <div class="footer-col">
+        <strong>Nest Capital Finance Pty Ltd</strong>
+        <div class="detail">
+          ABN: 12 345 678 901<br />
+          Australian Credit Licence: 123456<br />
+        </div>
+      </div>
+      <div class="footer-col">
+        <strong>Nest Property Advisory</strong>
+        <div class="detail">
+          ABN: 23 456 789 012<br />
+          Real Estate Licence: 987654L<br />
+        </div>
+      </div>
+      <div class="footer-col">
+        <strong>Nest Asset Pty Ltd</strong>
+        <div class="detail">
+          ACN 234567890<br />
+          Australian Credit Licence: 112233<br />
+        </div>
+      </div>
+    </div>
+    <div class="footer-bottom">
+      <div>&copy; 2025 Nest Capital | Privacy Policy | Culture</div>
+      <div class="footer-links">
+        <a href="#">Privacy Policy</a>
+        <a href="#">Culture</a>
+      </div>
+    </div>
   </footer>
   <script>
+    // Dropdown instant switcher for quick nav
+    document.querySelectorAll('.dropdown').forEach(function (drop, idx, arr) {
+      var content = drop.querySelector('.dropdown-content');
+      drop.addEventListener('mouseenter', function () {
+        arr.forEach(function (other) {
+          var otherContent = other.querySelector('.dropdown-content');
+          if (otherContent && otherContent !== content) { otherContent.style.display = 'none'; }
+        });
+        if (content) content.style.display = 'block';
+      });
+      drop.addEventListener('mouseleave', function () {
+        if (content) {
+          setTimeout(function () {
+            if (!drop.matches(':hover') && !content.matches(':hover')) {
+              content.style.display = 'none';
+            }
+          }, 800);
+        }
+      });
+      if (content) {
+        content.addEventListener('mouseenter', function () {
+          content.style.display = 'block';
+        });
+        content.addEventListener('mouseleave', function () {
+          setTimeout(function () {
+            if (!drop.matches(':hover') && !content.matches(':hover')) {
+              content.style.display = 'none';
+            }
+          }, 800);
+        });
+      }
+    });
+
+    // Hamburger menu toggle
     const menuToggle = document.getElementById('menuToggle');
     const navMenu = document.getElementById('navMenu');
 
@@ -325,11 +598,12 @@
     setInterval(nextSlide, 6000); // Change slide every 6 seconds
 
     // CTA button click action
-    document.getElementById('getStartedBtn').onclick = function () {
+    document.getElementById('getStartedBtn').onclick = function() {
       window.location.href = 'contact.html';
     };
   </script>
 </body>
 </html>
+
 
 
