--- a/mobileindex.html
+++ b/mobileindex.html
@@ -1,54 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Nest Capital Finance - Mortgage & Property Experts</title>
   <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300&display=swap" rel="stylesheet" />
   <style>
-    body {
+    html, body {
+      margin: 0;
+      padding: 0;
       font-family: 'Fira Sans', Arial, sans-serif;
       font-weight: 300;
-      margin: 0;
-      background: #181820;
+      background-color: #181820;
       color: #fff;
+      height: 100%;
+      overflow-x: hidden;
     }
-
     header {
       position: fixed;
-      top: 0;
-      left: 0;
-      right: 0;
+      top: 0; left: 0; right: 0;
+      z-index: 1000;
       background: transparent;
       display: flex;
-      align-items: center;
       justify-content: space-between;
+      align-items: center;
       padding: 0 1rem;
       height: 70px;
-      z-index: 1000;
       transition: background-color 0.3s ease, box-shadow 0.3s ease;
+      box-sizing: border-box;
     }
-
     header.scrolled {
       background-color: #181820;
       box-shadow: 0 2px 12px rgba(0, 0, 0, 0.75);
     }
-
     header img {
       height: 60px;
       filter: brightness(0) invert(1);
     }
-
     nav {
       display: flex;
       align-items: center;
       gap: 1.5rem;
       transition: transform 0.3s ease-in-out;
     }
-
-    nav a,
-    .dropbtn {
+    nav a, .dropbtn {
       color: #fff;
       font-weight: 600;
       font-size: 1rem;
@@ -61,23 +56,19 @@
       text-decoration: none;
       transition: color 0.2s ease;
     }
-
-    nav a:hover,
-    .dropbtn:hover {
+    nav a:hover, .dropbtn:hover {
       color: #606060;
     }
-
     .dropdown {
       position: relative;
       display: inline-block;
     }
-
     .dropdown-content {
       display: none;
       position: absolute;
       background-color: #232b34;
       min-width: 170px;
-      box-shadow: 0 8px 18px rgba(0, 0, 0, 0.22);
+      box-shadow: 0 8px 18px rgba(0,0,0,0.22);
       border-radius: 7px;
       margin-top: 0.6rem;
       padding: 0.4rem 0;
@@ -85,7 +76,6 @@
       top: 100%;
       z-index: 1001;
     }
-
     .dropdown-content a {
       display: block;
       padding: 0.8rem 1rem;
@@ -95,18 +85,14 @@
       font-size: 0.95rem;
       transition: background-color 0.2s ease;
     }
-
     .dropdown-content a:hover {
       background-color: #363d48;
       color: #b6befb;
     }
-
     .dropdown:hover .dropdown-content {
       display: block;
     }
-
     /* Hamburger menu */
-
     .menu-toggle {
       display: none;
       flex-direction: column;
@@ -115,16 +101,13 @@
       height: 22px;
       cursor: pointer;
     }
-
     .menu-toggle span {
       display: block;
       height: 4px;
       background-color: white;
       border-radius: 2px;
     }
-
     /* Mobile nav styles */
-
     @media (max-width: 768px) {
       nav {
         position: fixed;
@@ -136,15 +119,13 @@
         flex-direction: column;
         padding: 1rem;
         gap: 1rem;
-        box-shadow: -4px 0 16px rgba(0, 0, 0, 0.7);
+        box-shadow: -4px 0 16px rgba(0,0,0,0.7);
         transform: translateX(100%);
         overflow-y: auto;
       }
-
       nav.open {
         transform: translateX(0);
       }
-
       .dropdown-content {
         position: relative;
         background: none;
@@ -154,40 +135,300 @@
         border-radius: 0;
         display: none !important;
       }
-
       .dropdown-content.show {
         display: block !important;
       }
-
       .dropdown-content a {
         padding-left: 1rem;
       }
-
       .dropdown:hover .dropdown-content {
         display: none;
       }
-
       .menu-toggle {
         display: flex;
       }
-
-      .dropbtn {
-        cursor: pointer;
-      }
     }
-
     main {
-      padding-top: 80px;
-      max-width: 960px;
+      padding-top: 90px;
+      max-width: 950px;
       margin: 0 auto;
       padding-left: 1rem;
       padding-right: 1rem;
+      box-sizing: border-box;
     }
-
-    /* ...rest of your styling like hero, sections, footer, etc... */
+    .hero {
+      position: relative;
+      min-height: 90vh;
+      overflow: hidden;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      color: #fff;
+    }
+    .hero-slideshow {
+      position: absolute;
+      inset: 0;
+      filter: blur(3px);
+      transform: scale(1.05);
+      z-index: 0;
+    }
+    .slide {
+      opacity: 0;
+      position: absolute;
+      inset: 0;
+      background-size: cover;
+      background-position: center;
+      transition: opacity 1.5s ease-in-out;
+    }
+    .slide.active {
+      opacity: 0.5;
+      z-index: 1;
+    }
+    .hero-slideshow::after {
+      content: '';
+      position: absolute;
+      inset: 0;
+      background-color: rgba(0,0,0,0.55);
+      pointer-events: none;
+      z-index: 2;
+    }
+    .hero-content {
+      position: relative;
+      z-index: 3;
+      max-width: 600px;
+      padding-left: 1rem;
+    }
+    .hero h1 {
+      font-size: 3.2rem;
+      font-weight: 700;
+      margin: 0 0 1.6rem 0;
+      text-shadow: 0 6px 16px #18182080;
+    }
+    .hero p {
+      font-size: 1.3rem;
+      color: #ededed;
+      margin: 0 0 2.5rem 0;
+      max-width: 520px;
+      text-shadow: 0 2px 5px #191a24af;
+    }
+    .cta-button {
+      background: #fff;
+      color: #191a2b;
+      border: none;
+      padding: 1rem 2.3rem;
+      font-size: 1.1rem;
+      border-radius: 7px;
+      font-weight: 700;
+      box-shadow: 0 4px 20px #232f3e19;
+      cursor: pointer;
+      transition: background 0.18s, color 0.18s, transform 0.09s;
+      letter-spacing: .04em;
+      width: 100%;
+      max-width: 330px;
+      display: block;
+      margin-bottom: 0;
+    }
+    .cta-button:hover {
+      background: #2563eb;
+      color: #fff;
+    }
+    .cta-button:active {
+      transform: scale(0.965);
+      background: #1d47b8;
+      color: #fff;
+      box-shadow: 0 2px 10px #232f3e40;
+    }
+    #services {
+      margin-top: 3rem;
+    }
+    #services h2 {
+      color: #b6befb;
+      font-weight: 700;
+      margin-bottom: 1.5rem;
+    }
+    .services {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 1.5rem;
+      justify-content: center;
+    }
+    .service {
+      background: #2a2b36;
+      border-radius: 10px;
+      padding: 1.5rem 1rem;
+      width: 280px;
+      color: #c0c2d4;
+      box-shadow: 0 4px 12px #191a2336;
+      text-align: center;
+    }
+    .service h3 {
+      color: #b6befb;
+      font-weight: 600;
+      margin-bottom: 0.5rem;
+      font-size: 1.3rem;
+    }
+    #about {
+      margin: 3rem 0;
+      max-width: 600px;
+      margin-left: auto;
+      margin-right: auto;
+      font-size: 1.05rem;
+      line-height: 1.6;
+      color: #e8e6ff;
+    }
+    .testimonials {
+      margin-top: 2rem;
+      color: #c0c2d4;
+      font-style: italic;
+      text-align: center;
+      max-width: 600px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+    .testimonials strong {
+      display: block;
+      font-weight: 700;
+      margin-bottom: 0.5rem;
+      color: #b6befb;
+    }
+    footer.footer-main {
+      background: #1d1c22;
+      color: #bbb;
+      padding: 2rem 1rem;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 1rem;
+    }
+    .footer-top {
+      width: 100%;
+      max-width: 1300px;
+      display: flex;
+      gap: 2rem;
+      justify-content: space-between;
+      flex-wrap: wrap;
+      border-bottom: 1px solid #292834;
+      padding-bottom: 1rem;
+      box-sizing: border-box;
+    }
+    .footer-col {
+      flex: 1 1 260px;
+      color: #bfc2cf;
+      font-size: 1em;
+      min-width: 200px;
+      box-sizing: border-box;
+    }
+    .footer-col strong {
+      color: #fff;
+      font-size: 1.1em;
+      font-weight: 600;
+      letter-spacing: 0.02em;
+      display: block;
+      margin-bottom: 0.4em;
+    }
+    .footer-col .detail {
+      color: #b9bacf;
+      line-height: 1.4;
+      margin-bottom: 1em;
+      font-size: 0.95em;
+    }
+    .footer-bottom {
+      width: 100%;
+      max-width: 1300px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      color: #848484;
+      font-size: 1rem;
+      padding-top: 0.5em;
+      font-family: inherit;
+      flex-wrap: wrap;
+      box-sizing: border-box;
+    }
+    .footer-links a {
+      color: #bbb;
+      text-decoration: none;
+      margin: 0 1em 0 0;
+      font-size: 0.97em;
+      transition: color 0.2s ease-in-out;
+    }
+    .footer-links a:hover {
+      color: #fff;
+    }
+    @media (max-width: 768px) {
+      nav {
+        position: fixed;
+        top: 70px;
+        right: 0;
+        height: calc(100% - 70px);
+        width: 220px;
+        background-color: #181820;
+        flex-direction: column;
+        padding: 1rem;
+        gap: 1rem;
+        box-shadow: -4px 0 16px rgba(0,0,0,0.7);
+        transform: translateX(100%);
+        transition: transform 0.3s ease-in-out;
+        overflow-y: auto;
+      }
+      nav.open {
+        transform: translateX(0);
+      }
+      .dropdown-content {
+        position: relative;
+        background: none;
+        box-shadow: none;
+        margin-top: 0;
+        padding: 0;
+        border-radius: 0;
+        display: none !important;
+      }
+      .dropdown-content.show {
+        display: block !important;
+      }
+      .dropdown-content a {
+        padding-left: 1rem;
+      }
+      .dropdown:hover .dropdown-content {
+        display: none;
+      }
+      .menu-toggle {
+        display: flex;
+      }
+    }
+    @media (max-width: 420px) {
+      header img {
+        height: 50px;
+      }
+      .hero h1 {
+        font-size: 2rem;
+      }
+      .service {
+        width: 95vw;
+      }
+      .footer-top {
+        gap: 1rem;
+      }
+      .footer-bottom {
+        font-size: 0.85rem;
+      }
+    }
+    .menu-toggle {
+      display: none;
+      flex-direction: column;
+      gap: 5px;
+      width: 30px;
+      height: 22px;
+      cursor: pointer;
+    }
+    .menu-toggle span {
+      display: block;
+      height: 4px;
+      background-color: white;
+      border-radius: 2px;
+    }
   </style>
 </head>
-
 <body>
   <header>
     <img src="https://raw.githubusercontent.com/Shaggyyyz/nestcapitalfinance-landing/refs/heads/main/NFCLogo1.png" alt="Nest Capital Finance Logo" />
@@ -214,8 +455,8 @@
       </div>
       <div class="dropdown">
         <a href="#partners" class="dropbtn">Partners</a>
-        <div class="dropdown-content">
-          <a href="#" tabindex="-1">Coming Soon</a>
+        <div class="dropdown-content" role="menu" aria-hidden="true">
+          <a href="#" role="menuitem" tabindex="-1">Coming Soon</a>
         </div>
       </div>
       <div class="dropdown">
@@ -230,8 +471,8 @@
       <a href="contact.html" tabindex="0">Contact</a>
     </nav>
   </header>
-  <main>
 
+  <main>
     <div class="hero">
       <div class="hero-slideshow" aria-hidden="true">
         <div class="slide active"
@@ -251,42 +492,56 @@
         <button class="cta-button" id="getStartedBtn">Get Started</button>
       </div>
     </div>
+
     <section id="services">
       <h2>Our Services</h2>
       <div class="services">
         <div class="service">
           <h3>Home Loans</h3>
-          <p>Access competitive residential and commercial home loan solutions from 60+ lenders,
-            tailored to your needs.</p>
+          <p>
+            Access competitive residential and commercial home loan solutions from 60+ lenders,
+            tailored to your needs.
+          </p>
         </div>
         <div class="service">
           <h3>Property Advisory</h3>
-          <p>Guidance for buying, selling, or investing—local expertise and trusted advocacy to help you
-            succeed.</p>
+          <p>
+            Guidance for buying, selling, or investing—local expertise and trusted advocacy to help you
+            succeed.
+          </p>
         </div>
         <div class="service">
           <h3>Asset Finance</h3>
-          <p>Finance for vehicles, business equipment, and assets—streamlined for fast approvals and fair
-            rates.</p>
+          <p>
+            Finance for vehicles, business equipment, and assets—streamlined for fast approvals and fair
+            rates.
+          </p>
         </div>
       </div>
     </section>
+
     <section id="about">
       <h2>About Nest Capital Finance</h2>
-      <p>At Nest Capital Finance, our mission is to simplify the journey to your dream property. Our
-        award-nominated team combines industry experience, personal service, and insider access to leading
-        lenders—earning 5-star client reviews every step of the way. Based in Australia, we support clients
-        locally and overseas with tailored mortgage and property solutions.</p>
+      <p>
+        At Nest Capital Finance, our mission is to simplify the journey to your dream property. Our
+        award-nominated team combines industry experience, personal service, and insider access to
+        leading lenders—earning 5-star client reviews every step of the way. Based in Australia,
+        we support clients locally and overseas with tailored mortgage and property solutions.
+      </p>
       <div class="testimonials">
         <strong>Testimonials</strong>
-        <div class="testimonial">"Nest Capital Finance made my home buying journey stress-free—professional, fast,
-          and found a great rate for me." — Chris, Melbourne</div>
-        <div class="testimonial">"Expert advice, clear communication, and genuine care. Couldn’t recommend them more
-          highly." — Priya, Sydney</div>
+        <div class="testimonial">
+          "Nest Capital Finance made my home buying journey stress-free—professional, fast, and found a
+          great rate for me." — Chris, Melbourne
+        </div>
+        <div class="testimonial">
+          "Expert advice, clear communication, and genuine care. Couldn’t recommend them more highly."
+          — Priya, Sydney
+        </div>
       </div>
     </section>
-
   </main>
+
   <footer class="footer-main">
     <div class="footer-top">
       <div class="footer-col">
@@ -319,6 +574,7 @@
       </div>
     </div>
   </footer>
+  
   <script>
     // Dropdown hover effect for desktop
     document.querySelectorAll('.dropdown').forEach(function (drop) {
@@ -336,48 +592,47 @@
         content.style.display = 'none';
       });
     });
-
+  
     // Hamburger menu toggle
     const menuToggle = document.getElementById('menuToggle');
     const navMenu = document.getElementById('navMenu');
-
+  
     menuToggle.addEventListener('click', () => {
       navMenu.classList.toggle('open');
       const expanded = menuToggle.getAttribute('aria-expanded') === 'true' || false;
       menuToggle.setAttribute('aria-expanded', !expanded);
     });
-
+  
     // Scroll effect for header
     window.addEventListener('scroll', () => {
-      if (window.scrollY > 10) {
+      if(window.scrollY > 10){
         document.querySelector('header').classList.add('scrolled');
       } else {
         document.querySelector('header').classList.remove('scrolled');
       }
     });
-
+  
     // Hero slideshow functionality
     let currentSlide = 0;
     const slides = document.querySelectorAll('.hero-slideshow .slide');
-
+  
     function showSlide(index) {
       slides.forEach((slide, i) => {
         slide.classList.toggle('active', i === index);
       });
     }
-
+  
     function nextSlide() {
       currentSlide = (currentSlide + 1) % slides.length;
       showSlide(currentSlide);
     }
-
+  
     setInterval(nextSlide, 6000); // Change slide every 6 seconds
-
+  
     // CTA button click action
-    document.getElementById('getStartedBtn').onclick = function () {
+    document.getElementById('getStartedBtn').onclick = function() {
       window.location.href = 'contact.html';
     };
   </script>
 </body>
-
 </html>
