--- a/mobileindex.html
+++ b/mobileindex.html
@@ -6,151 +6,94 @@
   <title>Nest Capital Finance - Mortgage & Property Experts</title>
   <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300&display=swap" rel="stylesheet" />
   <style>
-    html, body {
-      margin: 0;
-      padding: 0;
+    body {
       font-family: 'Fira Sans', Arial, sans-serif;
       font-weight: 300;
-      background-color: #181820;
+      margin: 0;
+      background: #181820;
       color: #fff;
-      height: 100%;
       overflow-x: hidden;
     }
     header {
       position: fixed;
       top: 0; left: 0; right: 0;
-      z-index: 1000;
-      background: transparent;
+      height: 70px;
       display: flex;
       justify-content: space-between;
       align-items: center;
       padding: 0 1rem;
-      height: 70px;
+      background: transparent;
+      z-index: 1000;
       transition: background-color 0.3s ease, box-shadow 0.3s ease;
       box-sizing: border-box;
     }
     header.scrolled {
       background-color: #181820;
-      box-shadow: 0 2px 12px rgba(0, 0, 0, 0.75);
+      box-shadow: 0 2px 12px rgba(0,0,0,0.75);
     }
     header img {
       height: 60px;
       filter: brightness(0) invert(1);
     }
-    nav {
-      display: flex;
-      align-items: center;
-      gap: 1.5rem;
-      transition: transform 0.3s ease-in-out;
-    }
-    nav a, .dropbtn {
-      color: #fff;
-      font-weight: 600;
-      font-size: 1rem;
-      cursor: pointer;
-      white-space: nowrap;
-      background: none;
-      border: none;
-      padding: 0;
-      font-family: inherit;
-      text-decoration: none;
-      transition: color 0.2s ease;
-    }
-    nav a:hover, .dropbtn:hover {
-      color: #606060;
-    }
-    .dropdown {
-      position: relative;
-      display: inline-block;
-    }
-    .dropdown-content {
-      display: none;
-      position: absolute;
-      background-color: #232b34;
-      min-width: 170px;
-      box-shadow: 0 8px 18px rgba(0,0,0,0.22);
-      border-radius: 7px;
-      margin-top: 0.6rem;
-      padding: 0.4rem 0;
-      left: 0;
-      top: 100%;
-      z-index: 1001;
-    }
-    .dropdown-content a {
-      display: block;
-      padding: 0.8rem 1rem;
-      color: white;
-      text-decoration: none;
-      border-radius: 4px;
-      font-size: 0.95rem;
-      transition: background-color 0.2s ease;
-    }
-    .dropdown-content a:hover {
-      background-color: #363d48;
-      color: #b6befb;
-    }
-    .dropdown:hover .dropdown-content {
-      display: block;
-    }
-    /* Hamburger menu */
     .menu-toggle {
       display: none;
       flex-direction: column;
-      gap: 5px;
       width: 30px;
       height: 22px;
       cursor: pointer;
+      justify-content: space-between;
+      z-index: 1100;
     }
     .menu-toggle span {
       display: block;
       height: 4px;
       background-color: white;
       border-radius: 2px;
+      transition: transform 0.3s ease, opacity 0.3s ease;
     }
-    /* Mobile nav styles */
-    @media (max-width: 768px) {
-      nav {
-        position: fixed;
-        top: 70px;
-        right: 0;
-        height: calc(100% - 70px);
-        width: 220px;
-        background-color: #181820;
-        flex-direction: column;
-        padding: 1rem;
-        gap: 1rem;
-        box-shadow: -4px 0 16px rgba(0,0,0,0.7);
-        transform: translateX(100%);
-        overflow-y: auto;
-      }
-      nav.open {
-        transform: translateX(0);
-      }
-      .dropdown-content {
-        position: relative;
-        background: none;
-        box-shadow: none;
-        margin-top: 0;
-        padding: 0;
-        border-radius: 0;
-        display: none !important;
-      }
-      .dropdown-content.show {
-        display: block !important;
-      }
-      .dropdown-content a {
-        padding-left: 1rem;
-      }
-      .dropdown:hover .dropdown-content {
-        display: none;
-      }
-      .menu-toggle {
-        display: flex;
-      }
+    .menu-toggle.open span:nth-child(1) {
+      transform: translateY(9px) rotate(45deg);
+    }
+    .menu-toggle.open span:nth-child(2) {
+      opacity: 0;
+    }
+    .menu-toggle.open span:nth-child(3) {
+      transform: translateY(-9px) rotate(-45deg);
+    }
+    nav {
+      position: fixed;
+      top: 70px;
+      right: 0;
+      width: 220px;
+      height: calc(100% - 70px);
+      background: #181820;
+      flex-direction: column;
+      display: flex;
+      padding: 1rem;
+      gap: 1rem;
+      box-shadow: -4px 0 16px rgba(0,0,0,0.7);
+      transform: translateX(100%);
+      transition: transform 0.3s ease-in-out;
+      overflow-y: auto;
+      box-sizing: border-box;
+    }
+    nav.open {
+      transform: translateX(0);
+    }
+    nav a {
+      color: #fff;
+      font-weight: 600;
+      font-size: 1.1rem;
+      text-decoration: none;
+      cursor: pointer;
+      user-select: none;
+    }
+    nav a:hover {
+      color: #2563eb;
     }
     main {
       padding-top: 90px;
-      max-width: 950px;
+      max-width: 960px;
       margin: 0 auto;
       padding-left: 1rem;
       padding-right: 1rem;
@@ -164,6 +107,8 @@
       flex-direction: column;
       justify-content: center;
       color: #fff;
+      padding-left: 1rem;
+      padding-right: 1rem;
     }
     .hero-slideshow {
       position: absolute;
@@ -206,7 +151,6 @@
     }
     .hero p {
       font-size: 1.3rem;
-      color: #ededed;
       margin: 0 0 2.5rem 0;
       max-width: 520px;
       text-shadow: 0 2px 5px #191a24af;
@@ -226,17 +170,10 @@
       width: 100%;
       max-width: 330px;
       display: block;
-      margin-bottom: 0;
     }
     .cta-button:hover {
       background: #2563eb;
       color: #fff;
-    }
-    .cta-button:active {
-      transform: scale(0.965);
-      background: #1d47b8;
-      color: #fff;
-      box-shadow: 0 2px 10px #232f3e40;
     }
     #services {
       margin-top: 3rem;
@@ -361,7 +298,7 @@
         top: 70px;
         right: 0;
         height: calc(100% - 70px);
-        width: 220px;
+        width: 250px;
         background-color: #181820;
         flex-direction: column;
         padding: 1rem;
@@ -373,24 +310,6 @@
       }
       nav.open {
         transform: translateX(0);
-      }
-      .dropdown-content {
-        position: relative;
-        background: none;
-        box-shadow: none;
-        margin-top: 0;
-        padding: 0;
-        border-radius: 0;
-        display: none !important;
-      }
-      .dropdown-content.show {
-        display: block !important;
-      }
-      .dropdown-content a {
-        padding-left: 1rem;
-      }
-      .dropdown:hover .dropdown-content {
-        display: none;
       }
       .menu-toggle {
         display: flex;
@@ -413,78 +332,32 @@
         font-size: 0.85rem;
       }
     }
-    .menu-toggle {
-      display: none;
-      flex-direction: column;
-      gap: 5px;
-      width: 30px;
-      height: 22px;
-      cursor: pointer;
-    }
-    .menu-toggle span {
-      display: block;
-      height: 4px;
-      background-color: white;
-      border-radius: 2px;
-    }
   </style>
 </head>
 <body>
   <header>
     <img src="https://raw.githubusercontent.com/Shaggyyyz/nestcapitalfinance-landing/refs/heads/main/NFCLogo1.png" alt="Nest Capital Finance Logo" />
-    <div class="menu-toggle" id="menuToggle" aria-label="Toggle menu" aria-expanded="false" role="button" tabindex="0">
+    <div class="menu-toggle" id="menuToggle" aria-label="Toggle menu" role="button" tabindex="0" aria-expanded="false">
       <span></span>
       <span></span>
       <span></span>
     </div>
     <nav id="navMenu" aria-label="Primary navigation">
-      <div class="dropdown">
-        <button class="dropbtn" aria-haspopup="true" aria-expanded="false" type="button">Services</button>
-        <div class="dropdown-content" role="menu" aria-hidden="true">
-          <a href="Services.html" role="menuitem" tabindex="-1">Home Loans</a>
-          <a href="Services.html" role="menuitem" tabindex="-1">Property Advisory</a>
-          <a href="Services.html" role="menuitem" tabindex="-1">Asset Finance</a>
-        </div>
-      </div>
-      <div class="dropdown">
-        <button class="dropbtn" aria-haspopup="true" aria-expanded="false" type="button">About</button>
-        <div class="dropdown-content" role="menu" aria-hidden="true">
-          <a href="about.html#mission" role="menuitem" tabindex="-1">Company Mission</a>
-          <a href="about.html#team" role="menuitem" tabindex="-1">Meet Our Team</a>
-        </div>
-      </div>
-      <div class="dropdown">
-        <a href="#partners" class="dropbtn">Partners</a>
-        <div class="dropdown-content" role="menu" aria-hidden="true">
-          <a href="#" role="menuitem" tabindex="-1">Coming Soon</a>
-        </div>
-      </div>
-      <div class="dropdown">
-        <button class="dropbtn" aria-haspopup="true" aria-expanded="false" type="button">Resources</button>
-        <div class="dropdown-content" role="menu" aria-hidden="true">
-          <a href="resources.html#calculators" role="menuitem" tabindex="-1">Home Loan Calculators</a>
-          <a href="resources.html#lender-panel" role="menuitem" tabindex="-1">Lender Panel</a>
-          <a href="resources.html#blogs" role="menuitem" tabindex="-1">Blogs</a>
-          <a href="resources.html#faqs" role="menuitem" tabindex="-1">FAQs</a>
-        </div>
-      </div>
+      <a href="Services.html" tabindex="0">Services</a>
+      <a href="about.html#mission" tabindex="0">About</a>
+      <a href="#partners" tabindex="0">Partners</a>
+      <a href="resources.html" tabindex="0">Resources</a>
       <a href="contact.html" tabindex="0">Contact</a>
     </nav>
   </header>
-
   <main>
     <div class="hero">
       <div class="hero-slideshow" aria-hidden="true">
-        <div class="slide active"
-          style="background-image:url('https://raw.githubusercontent.com/Shaggyyyz/nestcapitalfinance-landing/refs/heads/main/image1.jpeg');"></div>
-        <div class="slide"
-          style="background-image:url('https://raw.githubusercontent.com/Shaggyyyz/nestcapitalfinance-landing/refs/heads/main/image2.jpeg');"></div>
-        <div class="slide"
-          style="background-image:url('https://raw.githubusercontent.com/Shaggyyyz/nestcapitalfinance-landing/refs/heads/main/image3.jpeg');"></div>
-        <div class="slide"
-          style="background-image:url('https://raw.githubusercontent.com/Shaggyyyz/nestcapitalfinance-landing/refs/heads/main/image4.jpeg');"></div>
-        <div class="slide"
-          style="background-image:url('https://raw.githubusercontent.com/Shaggyyyz/nestcapitalfinance-landing/refs/heads/main/image5.jpeg');"></div>
+        <div class="slide active" style="background-image:url('https://raw.githubusercontent.com/Shaggyyyz/nestcapitalfinance-landing/refs/heads/main/image1.jpeg');"></div>
+        <div class="slide" style="background-image:url('https://raw.githubusercontent.com/Shaggyyyz/nestcapitalfinance-landing/refs/heads/main/image2.jpeg');"></div>
+        <div class="slide" style="background-image:url('https://raw.githubusercontent.com/Shaggyyyz/nestcapitalfinance-landing/refs/heads/main/image3.jpeg');"></div>
+        <div class="slide" style="background-image:url('https://raw.githubusercontent.com/Shaggyyyz/nestcapitalfinance-landing/refs/heads/main/image4.jpeg');"></div>
+        <div class="slide" style="background-image:url('https://raw.githubusercontent.com/Shaggyyyz/nestcapitalfinance-landing/refs/heads/main/image5.jpeg');"></div>
       </div>
       <div class="hero-content">
         <h1>Dream. Plan. Buy.</h1>
@@ -492,56 +365,33 @@
         <button class="cta-button" id="getStartedBtn">Get Started</button>
       </div>
     </div>
-
     <section id="services">
       <h2>Our Services</h2>
       <div class="services">
         <div class="service">
           <h3>Home Loans</h3>
-          <p>
-            Access competitive residential and commercial home loan solutions from 60+ lenders,
-            tailored to your needs.
-          </p>
+          <p>Access competitive residential and commercial home loan solutions from 60+ lenders, tailored to your needs.</p>
         </div>
         <div class="service">
           <h3>Property Advisory</h3>
-          <p>
-            Guidance for buying, selling, or investing—local expertise and trusted advocacy to help you
-            succeed.
-          </p>
+          <p>Guidance for buying, selling, or investing—local expertise and trusted advocacy to help you succeed.</p>
         </div>
         <div class="service">
           <h3>Asset Finance</h3>
-          <p>
-            Finance for vehicles, business equipment, and assets—streamlined for fast approvals and fair
-            rates.
-          </p>
+          <p>Finance for vehicles, business equipment, and assets—streamlined for fast approvals and fair rates.</p>
         </div>
       </div>
     </section>
-
     <section id="about">
       <h2>About Nest Capital Finance</h2>
-      <p>
-        At Nest Capital Finance, our mission is to simplify the journey to your dream property. Our
-        award-nominated team combines industry experience, personal service, and insider access to
-        leading lenders—earning 5-star client reviews every step of the way. Based in Australia,
-        we support clients locally and overseas with tailored mortgage and property solutions.
-      </p>
+      <p>At Nest Capital Finance, our mission is to simplify the journey to your dream property. Our award-nominated team combines industry experience, personal service, and insider access to leading lenders—earning 5-star client reviews every step of the way. Based in Australia, we support clients locally and overseas with tailored mortgage and property solutions.</p>
       <div class="testimonials">
         <strong>Testimonials</strong>
-        <div class="testimonial">
-          "Nest Capital Finance made my home buying journey stress-free—professional, fast, and found a
-          great rate for me." — Chris, Melbourne
-        </div>
-        <div class="testimonial">
-          "Expert advice, clear communication, and genuine care. Couldn’t recommend them more highly."
-          — Priya, Sydney
-        </div>
+        <div class="testimonial">"Nest Capital Finance made my home buying journey stress-free—professional, fast, and found a great rate for me." — Chris, Melbourne</div>
+        <div class="testimonial">"Expert advice, clear communication, and genuine care. Couldn’t recommend them more highly." — Priya, Sydney</div>
       </div>
     </section>
   </main>
-
   <footer class="footer-main">
     <div class="footer-top">
       <div class="footer-col">
@@ -574,62 +424,44 @@
       </div>
     </div>
   </footer>
-  
   <script>
-    // Dropdown hover effect for desktop
-    document.querySelectorAll('.dropdown').forEach(function (drop) {
-      var content = drop.querySelector('.dropdown-content');
-      drop.addEventListener('mouseenter', function () {
-        content.style.display = 'block';
-      });
-      drop.addEventListener('mouseleave', function () {
-        content.style.display = 'none';
-      });
-      content.addEventListener('mouseenter', function () {
-        content.style.display = 'block';
-      });
-      content.addEventListener('mouseleave', function () {
-        content.style.display = 'none';
-      });
-    });
-  
-    // Hamburger menu toggle
     const menuToggle = document.getElementById('menuToggle');
     const navMenu = document.getElementById('navMenu');
-  
+
     menuToggle.addEventListener('click', () => {
       navMenu.classList.toggle('open');
+      menuToggle.classList.toggle('open');
       const expanded = menuToggle.getAttribute('aria-expanded') === 'true' || false;
       menuToggle.setAttribute('aria-expanded', !expanded);
     });
-  
+
     // Scroll effect for header
     window.addEventListener('scroll', () => {
-      if(window.scrollY > 10){
+      if (window.scrollY > 10) {
         document.querySelector('header').classList.add('scrolled');
       } else {
         document.querySelector('header').classList.remove('scrolled');
       }
     });
-  
+
     // Hero slideshow functionality
     let currentSlide = 0;
     const slides = document.querySelectorAll('.hero-slideshow .slide');
-  
+
     function showSlide(index) {
       slides.forEach((slide, i) => {
         slide.classList.toggle('active', i === index);
       });
     }
-  
+
     function nextSlide() {
       currentSlide = (currentSlide + 1) % slides.length;
       showSlide(currentSlide);
     }
-  
-    setInterval(nextSlide, 6000); // Change slide every 6 seconds
-  
-    // CTA button click action
+
+    setInterval(nextSlide, 6000);
+
+    // CTA button redirect
     document.getElementById('getStartedBtn').onclick = function() {
       window.location.href = 'contact.html';
     };
