--- a/mobileindex.html
+++ b/mobileindex.html
@@ -100,53 +100,53 @@
       box-sizing: border-box;
     }
     .hero {
-  position: relative;
-  min-height: 90vh;
-  overflow: hidden;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  color: #fff;
-  padding-left: 1rem;
-  padding-right: 1rem;
-  /* Remove background here, let the slideshow handle it */
-}
+      position: relative;
+      min-height: 90vh;
+      overflow: hidden;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      color: #fff;
+      padding-left: 1rem;
+      padding-right: 1rem;
+      /* Remove background here, let the slideshow handle it */
+    }
 
-.hero-slideshow {
-  position: absolute;
-  top: 0; left: 0; right: 0; bottom: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 0;
-  filter: blur(3px);
-  transform: scale(1.05);
-}
+    .hero-slideshow {
+      position: absolute;
+      top: 0; left: 0; right: 0; bottom: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 0;
+      filter: blur(3px);
+      transform: scale(1.05);
+    }
 
-.slide {
-  position: absolute;
-  inset: 0;
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  opacity: 0;
-  transition: opacity 1.5s ease-in-out;
-  border: none;   /* Ensure no border */
-  box-shadow: none; /* Ensure no shadow */
-}
+    .slide {
+      position: absolute;
+      inset: 0;
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      opacity: 0;
+      transition: opacity 1.5s ease-in-out;
+      border: none;   /* Ensure no border */
+      box-shadow: none; /* Ensure no shadow */
+    }
 
-.slide.active {
-  opacity: 1;    /* Set higher if you want the background to show fully */
-  z-index: 1;
-}
+    .slide.active {
+      opacity: 1;
+      z-index: 1;
+    }
 
-.hero-slideshow::after {
-  content: '';
-  position: absolute;
-  inset: 0;
-  background-color: rgba(0,0,0,0.35); /* Optional: for subtle dark overlay */
-  pointer-events: none;
-  z-index: 2;
-}
+    .hero-slideshow::after {
+      content: '';
+      position: absolute;
+      inset: 0;
+      background-color: rgba(0,0,0,0.35); /* Optional: for subtle dark overlay */
+      pointer-events: none;
+      z-index: 2;
+    }
 
     .hero-content {
       position: relative;
@@ -326,6 +326,14 @@
         display: flex;
       }
     }
+    @media (max-width: 600px) {
+      .hero,
+      .hero-content,
+      main {
+        padding-left: 0 !important;
+        padding-right: 0 !important;
+      }
+    }
     @media (max-width: 420px) {
       header img {
         height: 50px;
@@ -479,3 +487,4 @@
   </script>
 </body>
 </html>
+
