--- a/Services.html
+++ b/Services.html
@@ -176,6 +176,20 @@
       }
     }
   </style>
+  <script>
+  // Define your mobile site URL (change to your actual mobile site URL)
+  const mobileSiteUrl = "https://shaggyyyz.github.io/nestcapitalfinance-landing/mobileservices.html";
+
+  // Check if already on mobile redirect site to prevent loops
+  const isOnMobileSite = window.location.href.includes("https://shaggyyyz.github.io/nestcapitalfinance-landing/mobileservices.html");
+
+  // Detect mobile viewport width & redirect accordingly
+  if (window.matchMedia("(max-width: 768px)").matches && !isOnMobileSite) {
+    window.location.href = mobileSiteUrl;
+  }
+</script>
+
+  
 </head>
 <body>
   <header>
